maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.error
Escaper:2: error: not found: value estSurBiscut
  while(!estSurBiscut()){keepHandOnSideWall()}
         ^Escaper:2: error: not found: value keepHandOnSideWall
  while(!estSurBiscut()){keepHandOnSideWall()}
                         ^Escaper:6: error: not found: value keepHandOnSideWall
keepHandOnSideWall(){
^