maze.lessons.maze.wallfindfollow.WallFindFollowMaze.scala.code
override def run() {
  while(!estSurBiscut()){keepHandOnSideWall()}
  
}

keepHandOnSideWall(){
  while(!estFaceMur()){avance();gauche()}
  if(estFaceMur()){droite();avance();gauche()}
}